--- a/introducao/css/styles.css
+++ b/introducao/css/styles.css
@@ -7,3 +7,7 @@ img.clear {
     border: 0 !important;
     box-shadow: none !important;
 }
+
+.reveal ul {
+    list-style-type: none !important;
+}
